[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "async-selector-thread"
dynamic = ["version"]
description = 'selector compatibility for async frameworks that lack it'
readme = "README.md"
requires-python = ">=3.7"
license = "Apache-2.0"
keywords = []
authors = [
  { name = "Min RK", email = "benjaminrk@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/minrk/async-selector-thread#readme"
Issues = "https://github.com/minrk/async-selector-thread/issues"
Source = "https://github.com/minrk/async-selector-thread"

[tool.hatch.version]
path = "async_selector_thread/__init__.py"

[tool.tbump]
github_url = "https://github.com/minrk/async-selector-thread"

[tool.tbump.version]
current = "0.0.1.dev"

# Example of a semver regexp.
# Make sure this matches current_version before
# using tbump
regex = '''
  (?P<major>\d+)
  \.
  (?P<minor>\d+)
  \.
  (?P<patch>\d+)
  (?P<pre>((a|b|rc)\d+)|)
  \.?
  (?P<dev>(?<=\.)dev\d*|)
  '''

[tool.tbump.git]
message_template = "Bump to {new_version}"
tag_template = "{new_version}"

[[tool.tbump.file]]
src = "async_selector_thread/__init__.py"

[tool.ruff.lint]
ignore = [
    "F841", # unused variable
]
select = [
    "E7", # comparisons
    "E9", # syntax
    "I", # isort
    "UP", # pyupgrade
    "F", # flake8
]
